feature/2105/Se implemento nueva arquitectura para Materia.